--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,7 +1,4 @@
 ﻿@page "/"
+@using Microsoft.AspNetCore.SignalR.Client
+@inject NavigationManager NavigationManager
 
-<h1>Hello Nikita</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
