--- a/Pages/Chat.razor
+++ b/Pages/Chat.razor
@@ -35,7 +35,7 @@
     private HubConnection hubConnection;
     private string userInput = "";
     private string messageInput = "";
-    private static List<string> messages = new List<string>();
+    private List<string> messages = new List<string>();
 
     protected override async Task OnInitializedAsync()
     {   
