--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -14,7 +14,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="chat">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+                <span class="oi oi-plus" aria-hidden="true"></span> Chat
             </NavLink>
         </li>
         <li class="nav-item px-3">
